ANTLR4/FianchettoParser.cpp

// Generated from Fianchetto.g4 by ANTLR 4.10.1

#include "FianchettoListener.h"

#include "FianchettoParser.h"

using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FianchettoParserStaticData final {
  FianchettoParserStaticData(std::vector<std::string> ruleNames,
                             std::vector<std::string> literalNames,
                             std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FianchettoParserStaticData(const FianchettoParserStaticData &) = delete;
  FianchettoParserStaticData(FianchettoParserStaticData &&) = delete;
  FianchettoParserStaticData &
  operator=(const FianchettoParserStaticData &) = delete;
  FianchettoParserStaticData &operator=(FianchettoParserStaticData &&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag fianchettoParserOnceFlag;
FianchettoParserStaticData *fianchettoParserStaticData = nullptr;

void fianchettoParserInitialize() {
  assert(fianchettoParserStaticData == nullptr);
  auto staticData = std::make_unique<FianchettoParserStaticData>(
      std::vector<std::string>{"program",
                               "functionDefinition",
                               "globalDeclaration",
                               "parameterList",
                               "parameter",
                               "typeSpecifier",
                               "statement",
                               "expressionStatement",
                               "compoundStatement",
                               "selectionStatement",
                               "iterationStatement",
                               "jumpStatement",
                               "declaration",
                               "expression",
                               "assignmentExpression",
                               "conditionalExpression",
                               "logicalOrExpression",
                               "logicalAndExpression",
                               "equalityExpression",
                               "relationalExpression",
                               "additiveExpression",
                               "multiplicativeExpression",
                               "unaryExpression",
                               "postfixExpression",
                               "primaryExpression",
                               "argumentList",
                               "constant",
                               "assignmentOperator"},
      std::vector<std::string>{"",
                               "'('",
                               "')'",
                               "'='",
                               "';'",
                               "','",
                               "'int'",
                               "'float'",
                               "'double'",
                               "'void'",
                               "'differentiable'",
                               "'{'",
                               "'}'",
                               "'if'",
                               "'else'",
                               "'while'",
                               "'for'",
                               "'return'",
                               "'\\u003F'",
                               "':'",
                               "'||'",
                               "'&&'",
                               "'=='",
                               "'!='",
                               "'<'",
                               "'>'",
                               "'<='",
                               "'>='",
                               "'+'",
                               "'-'",
                               "'*'",
                               "'/'",
                               "'%'",
                               "'!'",
                               "'++'",
                               "'--'",
                               "'['",
                               "']'",
                               "'''",
                               "'+='",
                               "'-='",
                               "'*='",
                               "'/='",
                               "'%='"},
      std::vector<std::string>{"",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "",
                               "INTEGER_LITERAL",
                               "FLOAT_LITERAL",
                               "STRING_LITERAL",
                               "IDENTIFIER",
                               "COMMENT",
                               "MULTI_LINE_COMMENT",
                               "WHITESPACE"});
  staticData->serializedATN = antlr4::atn::SerializedATNView(
      serializedATNSegment,
      sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) {
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i),
                                           i);
  }
  fianchettoParserStaticData = staticData.release();
}

} // namespace

FianchettoParser::FianchettoParser(TokenStream *input)
    : FianchettoParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FianchettoParser::FianchettoParser(
    TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options)
    : Parser(input) {
  FianchettoParser::initialize();
  _interpreter = new atn::ParserATNSimulator(
      this, *fianchettoParserStaticData->atn,
      fianchettoParserStaticData->decisionToDFA,
      fianchettoParserStaticData->sharedContextCache, options);
}

FianchettoParser::~FianchettoParser() { delete _interpreter; }

const atn::ATN &FianchettoParser::getATN() const {
  return *fianchettoParserStaticData->atn;
}

std::string FianchettoParser::getGrammarFileName() const {
  return "Fianchetto.g4";
}

const std::vector<std::string> &FianchettoParser::getRuleNames() const {
  return fianchettoParserStaticData->ruleNames;
}

const dfa::Vocabulary &FianchettoParser::getVocabulary() const {
  return fianchettoParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FianchettoParser::getSerializedATN() const {
  return fianchettoParserStaticData->serializedATN;
}

//----------------- ProgramContext
//------------------------------------------------------------------

FianchettoParser::ProgramContext::ProgramContext(ParserRuleContext *parent,
                                                 size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FianchettoParser::ProgramContext::EOF() {
  return getToken(FianchettoParser::EOF, 0);
}

std::vector<FianchettoParser::FunctionDefinitionContext *>
FianchettoParser::ProgramContext::functionDefinition() {
  return getRuleContexts<FianchettoParser::FunctionDefinitionContext>();
}

FianchettoParser::FunctionDefinitionContext *
FianchettoParser::ProgramContext::functionDefinition(size_t i) {
  return getRuleContext<FianchettoParser::FunctionDefinitionContext>(i);
}

std::vector<FianchettoParser::GlobalDeclarationContext *>
FianchettoParser::ProgramContext::globalDeclaration() {
  return getRuleContexts<FianchettoParser::GlobalDeclarationContext>();
}

FianchettoParser::GlobalDeclarationContext *
FianchettoParser::ProgramContext::globalDeclaration(size_t i) {
  return getRuleContext<FianchettoParser::GlobalDeclarationContext>(i);
}

size_t FianchettoParser::ProgramContext::getRuleIndex() const {
  return FianchettoParser::RuleProgram;
}

void FianchettoParser::ProgramContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void FianchettoParser::ProgramContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

FianchettoParser::ProgramContext *FianchettoParser::program() {
  ProgramContext *_localctx =
      _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, FianchettoParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (
        (((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << FianchettoParser::T__5) | (1ULL << FianchettoParser::T__6) |
           (1ULL << FianchettoParser::T__7) | (1ULL << FianchettoParser::T__8) |
           (1ULL << FianchettoParser::T__9))) != 0)) {
      setState(58);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(
          _input, 0, _ctx)) {
      case 1: {
        setState(56);
        functionDefinition();
        break;
      }

      case 2: {
        setState(57);
        globalDeclaration();
        break;
      }

      default:
        break;
      }
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    match(FianchettoParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefinitionContext
//------------------------------------------------------------------

FianchettoParser::FunctionDefinitionContext::FunctionDefinitionContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::TypeSpecifierContext *
FianchettoParser::FunctionDefinitionContext::typeSpecifier() {
  return getRuleContext<FianchettoParser::TypeSpecifierContext>(0);
}

tree::TerminalNode *FianchettoParser::FunctionDefinitionContext::IDENTIFIER() {
  return getToken(FianchettoParser::IDENTIFIER, 0);
}

FianchettoParser::CompoundStatementContext *
FianchettoParser::FunctionDefinitionContext::compoundStatement() {
  return getRuleContext<FianchettoParser::CompoundStatementContext>(0);
}

FianchettoParser::ParameterListContext *
FianchettoParser::FunctionDefinitionContext::parameterList() {
  return getRuleContext<FianchettoParser::ParameterListContext>(0);
}

size_t FianchettoParser::FunctionDefinitionContext::getRuleIndex() const {
  return FianchettoParser::RuleFunctionDefinition;
}

void FianchettoParser::FunctionDefinitionContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDefinition(this);
}

void FianchettoParser::FunctionDefinitionContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDefinition(this);
}

FianchettoParser::FunctionDefinitionContext *
FianchettoParser::functionDefinition() {
  FunctionDefinitionContext *_localctx =
      _tracker.createInstance<FunctionDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, FianchettoParser::RuleFunctionDefinition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    typeSpecifier();
    setState(66);
    match(FianchettoParser::IDENTIFIER);
    setState(67);
    match(FianchettoParser::T__0);
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) &
          ((1ULL << FianchettoParser::T__5) | (1ULL << FianchettoParser::T__6) |
           (1ULL << FianchettoParser::T__7) | (1ULL << FianchettoParser::T__8) |
           (1ULL << FianchettoParser::T__9))) != 0)) {
      setState(68);
      parameterList();
    }
    setState(71);
    match(FianchettoParser::T__1);
    setState(72);
    compoundStatement();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalDeclarationContext
//------------------------------------------------------------------

FianchettoParser::GlobalDeclarationContext::GlobalDeclarationContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::TypeSpecifierContext *
FianchettoParser::GlobalDeclarationContext::typeSpecifier() {
  return getRuleContext<FianchettoParser::TypeSpecifierContext>(0);
}

tree::TerminalNode *FianchettoParser::GlobalDeclarationContext::IDENTIFIER() {
  return getToken(FianchettoParser::IDENTIFIER, 0);
}

FianchettoParser::ExpressionContext *
FianchettoParser::GlobalDeclarationContext::expression() {
  return getRuleContext<FianchettoParser::ExpressionContext>(0);
}

size_t FianchettoParser::GlobalDeclarationContext::getRuleIndex() const {
  return FianchettoParser::RuleGlobalDeclaration;
}

void FianchettoParser::GlobalDeclarationContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalDeclaration(this);
}

void FianchettoParser::GlobalDeclarationContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalDeclaration(this);
}

FianchettoParser::GlobalDeclarationContext *
FianchettoParser::globalDeclaration() {
  GlobalDeclarationContext *_localctx =
      _tracker.createInstance<GlobalDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, FianchettoParser::RuleGlobalDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    typeSpecifier();
    setState(75);
    match(FianchettoParser::IDENTIFIER);
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FianchettoParser::T__2) {
      setState(76);
      match(FianchettoParser::T__2);
      setState(77);
      expression();
    }
    setState(80);
    match(FianchettoParser::T__3);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext
//------------------------------------------------------------------

FianchettoParser::ParameterListContext::ParameterListContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<FianchettoParser::ParameterContext *>
FianchettoParser::ParameterListContext::parameter() {
  return getRuleContexts<FianchettoParser::ParameterContext>();
}

FianchettoParser::ParameterContext *
FianchettoParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<FianchettoParser::ParameterContext>(i);
}

size_t FianchettoParser::ParameterListContext::getRuleIndex() const {
  return FianchettoParser::RuleParameterList;
}

void FianchettoParser::ParameterListContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void FianchettoParser::ParameterListContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}

FianchettoParser::ParameterListContext *FianchettoParser::parameterList() {
  ParameterListContext *_localctx =
      _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 6, FianchettoParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    parameter();
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FianchettoParser::T__4) {
      setState(83);
      match(FianchettoParser::T__4);
      setState(84);
      parameter();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext
//------------------------------------------------------------------

FianchettoParser::ParameterContext::ParameterContext(ParserRuleContext *parent,
                                                     size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::TypeSpecifierContext *
FianchettoParser::ParameterContext::typeSpecifier() {
  return getRuleContext<FianchettoParser::TypeSpecifierContext>(0);
}

tree::TerminalNode *FianchettoParser::ParameterContext::IDENTIFIER() {
  return getToken(FianchettoParser::IDENTIFIER, 0);
}

size_t FianchettoParser::ParameterContext::getRuleIndex() const {
  return FianchettoParser::RuleParameter;
}

void FianchettoParser::ParameterContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void FianchettoParser::ParameterContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}

FianchettoParser::ParameterContext *FianchettoParser::parameter() {
  ParameterContext *_localctx =
      _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 8, FianchettoParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    typeSpecifier();
    setState(91);
    match(FianchettoParser::IDENTIFIER);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeSpecifierContext
//------------------------------------------------------------------

FianchettoParser::TypeSpecifierContext::TypeSpecifierContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::TypeSpecifierContext *
FianchettoParser::TypeSpecifierContext::typeSpecifier() {
  return getRuleContext<FianchettoParser::TypeSpecifierContext>(0);
}

size_t FianchettoParser::TypeSpecifierContext::getRuleIndex() const {
  return FianchettoParser::RuleTypeSpecifier;
}

void FianchettoParser::TypeSpecifierContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeSpecifier(this);
}

void FianchettoParser::TypeSpecifierContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeSpecifier(this);
}

FianchettoParser::TypeSpecifierContext *FianchettoParser::typeSpecifier() {
  TypeSpecifierContext *_localctx =
      _tracker.createInstance<TypeSpecifierContext>(_ctx, getState());
  enterRule(_localctx, 10, FianchettoParser::RuleTypeSpecifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case FianchettoParser::T__5: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      match(FianchettoParser::T__5);
      break;
    }

    case FianchettoParser::T__6: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      match(FianchettoParser::T__6);
      break;
    }

    case FianchettoParser::T__7: {
      enterOuterAlt(_localctx, 3);
      setState(95);
      match(FianchettoParser::T__7);
      break;
    }

    case FianchettoParser::T__8: {
      enterOuterAlt(_localctx, 4);
      setState(96);
      match(FianchettoParser::T__8);
      break;
    }

    case FianchettoParser::T__9: {
      enterOuterAlt(_localctx, 5);
      setState(97);
      match(FianchettoParser::T__9);
      setState(98);
      typeSpecifier();
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext
//------------------------------------------------------------------

FianchettoParser::StatementContext::StatementContext(ParserRuleContext *parent,
                                                     size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::ExpressionStatementContext *
FianchettoParser::StatementContext::expressionStatement() {
  return getRuleContext<FianchettoParser::ExpressionStatementContext>(0);
}

FianchettoParser::CompoundStatementContext *
FianchettoParser::StatementContext::compoundStatement() {
  return getRuleContext<FianchettoParser::CompoundStatementContext>(0);
}

FianchettoParser::SelectionStatementContext *
FianchettoParser::StatementContext::selectionStatement() {
  return getRuleContext<FianchettoParser::SelectionStatementContext>(0);
}

FianchettoParser::IterationStatementContext *
FianchettoParser::StatementContext::iterationStatement() {
  return getRuleContext<FianchettoParser::IterationStatementContext>(0);
}

FianchettoParser::JumpStatementContext *
FianchettoParser::StatementContext::jumpStatement() {
  return getRuleContext<FianchettoParser::JumpStatementContext>(0);
}

size_t FianchettoParser::StatementContext::getRuleIndex() const {
  return FianchettoParser::RuleStatement;
}

void FianchettoParser::StatementContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void FianchettoParser::StatementContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

FianchettoParser::StatementContext *FianchettoParser::statement() {
  StatementContext *_localctx =
      _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, FianchettoParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
    case FianchettoParser::T__0:
    case FianchettoParser::T__3:
    case FianchettoParser::T__28:
    case FianchettoParser::T__32:
    case FianchettoParser::T__33:
    case FianchettoParser::T__34:
    case FianchettoParser::INTEGER_LITERAL:
    case FianchettoParser::FLOAT_LITERAL:
    case FianchettoParser::STRING_LITERAL:
    case FianchettoParser::IDENTIFIER: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      expressionStatement();
      break;
    }

    case FianchettoParser::T__10: {
      enterOuterAlt(_localctx, 2);
      setState(102);
      compoundStatement();
      break;
    }

    case FianchettoParser::T__12: {
      enterOuterAlt(_localctx, 3);
      setState(103);
      selectionStatement();
      break;
    }

    case FianchettoParser::T__14:
    case FianchettoParser::T__15: {
      enterOuterAlt(_localctx, 4);
      setState(104);
      iterationStatement();
      break;
    }

    case FianchettoParser::T__16: {
      enterOuterAlt(_localctx, 5);
      setState(105);
      jumpStatement();
      break;
    }

    default:
      throw NoViableAltException(this);
    }

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext
//------------------------------------------------------------------

FianchettoParser::ExpressionStatementContext::ExpressionStatementContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FianchettoParser::ExpressionContext *
FianchettoParser::ExpressionStatementContext::expression() {
  return getRuleContext<FianchettoParser::ExpressionContext>(0);
}

size_t FianchettoParser::ExpressionStatementContext::getRuleIndex() const {
  return FianchettoParser::RuleExpressionStatement;
}

void FianchettoParser::ExpressionStatementContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void FianchettoParser::ExpressionStatementContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}

FianchettoParser::ExpressionStatementContext *
FianchettoParser::expressionStatement() {
  ExpressionStatementContext *_localctx =
      _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, FianchettoParser::RuleExpressionStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~0x3fULL) == 0) &&
         ((1ULL << _la) & ((1ULL << FianchettoParser::T__0) |
                           (1ULL << FianchettoParser::T__28) |
                           (1ULL << FianchettoParser::T__32) |
                           (1ULL << FianchettoParser::T__33) |
                           (1ULL << FianchettoParser::T__34) |
                           (1ULL << FianchettoParser::INTEGER_LITERAL) |
                           (1ULL << FianchettoParser::FLOAT_LITERAL) |
                           (1ULL << FianchettoParser::STRING_LITERAL) |
                           (1ULL << FianchettoParser::IDENTIFIER))) != 0)) {
      setState(108);
      expression();
    }
    setState(111);
    match(FianchettoParser::T__3);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStatementContext
//------------------------------------------------------------------

FianchettoParser::CompoundStatementContext::CompoundStatementContext(
    ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<FianchettoParser::DeclarationContext *>
FianchettoParser::CompoundStatementContext::declaration() {
  return getRuleContexts<FianchettoParser::DeclarationContext>();
}

FianchettoParser::DeclarationContext *
FianchettoParser::CompoundStatementContext::declaration(size_t i) {
  return getRuleContext<FianchettoParser::DeclarationContext>(i);
}

std::vector<FianchettoParser::StatementContext *>
FianchettoParser::CompoundStatementContext::statement() {
  return getRuleContexts<FianchettoParser::StatementContext>();
}

FianchettoParser::StatementContext *
FianchettoParser::CompoundStatementContext::statement(size_t i) {
  return getRuleContext<FianchettoParser::StatementContext>(i);
}

size_t FianchettoParser::CompoundStatementContext::getRuleIndex() const {
  return FianchettoParser::RuleCompoundStatement;
}

void FianchettoParser::CompoundStatementContext::enterRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompoundStatement(this);
}

void FianchettoParser::CompoundStatementContext::exitRule(
    tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FianchettoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompoundStatement(this);
}

FianchettoParser::CompoundStatementContext *
FianchettoParser::compoundStatement() {
  CompoundStatementContext *_localctx =
      _tracker.createInstance<CompoundStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, FianchettoParser::RuleCompoundStatement);
  size_t _la = 0;
